# TetrisCMake

./: Board.cpp  Board.h  Box.cpp  Box.h  CMakeLists.txt  GridPiece.h  HoldRectangle.cpp  HoldRectangle.h  Piece.cpp  Piece.h  Window.cpp  Window.h  main.cpp  nextShapesHolder.cpp  nextShapesHolder.h
